adding option to specifiy layerName
