# api/swagger/swagger.yaml
@@ -24,10 +24,40 @@ paths:
           - spring index
         operationId: areaStats
         parameters:
+                - name: layerName
+                  in: query
+                  description: the si-x layer to clip from
+                  type: string
+                  enum:
+                    - si-x:arnoldred_bloom_ncep_historic
+                    - si-x:arnoldred_bloom_ncep
+                    - si-x:arnoldred_bloom_prism
+                    - si-x:arnoldred_leaf_ncep_historic
+                    - si-x:arnoldred_leaf_ncep
+                    - si-x:arnoldred_leaf_prism
+                    - si-x:average_bloom_best
+                    - si-x:average_bloom_ncep_historic
+                    - si-x:average_bloom_ncep
+                    - si-x:average_bloom_prism
+                    - si-x:average_leaf_best
+                    - si-x:average_leaf_historic
+                    - si-x:average_leaf_ncep
+                    - si-x:average_leaf_prism
+                    - si-x:lilac_bloom_ncep_historic
+                    - si-x:lilac_bloom_ncep
+                    - si-x:lilac_bloom_prism
+                    - si-x:lilac_leaf_ncep_historic
+                    - si-x:lilac_leaf_ncep
+                    - si-x:lilac_leaf_prism
+                    - si-x:zabelli_bloom_ncep_historic
+                    - si-x:zabelli_bloom_ncep
+                    - si-x:zabelli_bloom_prism
+                    - si-x:zabelli_leaf_ncep_historic
+                    - si-x:zabelli_leaf_ncep
+                    - si-x:zabelli_leaf_prism
                 - name: phenophase
                   in: query
                   description: the spring index phenophase to average over
-                  required: true
                   type: string
                   enum:
                     - leaf
@@ -35,7 +65,6 @@ paths:
                 - name: plant
                   in: query
                   description: the spring index plant or average for all three combined (for BEST only average is available)
-                  required: true
                   type: string
                   enum:
                     - lilac
@@ -633,7 +662,6 @@ paths:
                 - name: climate
                   in: query
                   description: the backing climate data provider. NCEP available from 2016 on, PRISM available from 1981 through previous year, BEST available from 1880-2013.
-                  required: true
                   type: string
                   enum:
                     - NCEP
@@ -670,6 +698,37 @@ paths:
           - spring index
         operationId: clippedImage
         parameters:
+                - name: layerName
+                  in: query
+                  description: the si-x layer to clip from
+                  type: string
+                  enum:
+                    - si-x:arnoldred_bloom_ncep_historic
+                    - si-x:arnoldred_bloom_ncep
+                    - si-x:arnoldred_bloom_prism
+                    - si-x:arnoldred_leaf_ncep_historic
+                    - si-x:arnoldred_leaf_ncep
+                    - si-x:arnoldred_leaf_prism
+                    - si-x:average_bloom_best
+                    - si-x:average_bloom_ncep_historic
+                    - si-x:average_bloom_ncep
+                    - si-x:average_bloom_prism
+                    - si-x:average_leaf_best
+                    - si-x:average_leaf_historic
+                    - si-x:average_leaf_ncep
+                    - si-x:average_leaf_prism
+                    - si-x:lilac_bloom_ncep_historic
+                    - si-x:lilac_bloom_ncep
+                    - si-x:lilac_bloom_prism
+                    - si-x:lilac_leaf_ncep_historic
+                    - si-x:lilac_leaf_ncep
+                    - si-x:lilac_leaf_prism
+                    - si-x:zabelli_bloom_ncep_historic
+                    - si-x:zabelli_bloom_ncep
+                    - si-x:zabelli_bloom_prism
+                    - si-x:zabelli_leaf_ncep_historic
+                    - si-x:zabelli_leaf_ncep
+                    - si-x:zabelli_leaf_prism
                 - name: phenophase
                   in: query
                   description: the spring index phenophase to average over
@@ -1966,10 +2025,40 @@ paths:
             - spring index
           operationId: areaStatsTimeSeries
           parameters:
+                  - name: layerName
+                    in: query
+                    description: the si-x layer to clip from
+                    type: string
+                    enum:
+                      - si-x:arnoldred_bloom_ncep_historic
+                      - si-x:arnoldred_bloom_ncep
+                      - si-x:arnoldred_bloom_prism
+                      - si-x:arnoldred_leaf_ncep_historic
+                      - si-x:arnoldred_leaf_ncep
+                      - si-x:arnoldred_leaf_prism
+                      - si-x:average_bloom_best
+                      - si-x:average_bloom_ncep_historic
+                      - si-x:average_bloom_ncep
+                      - si-x:average_bloom_prism
+                      - si-x:average_leaf_best
+                      - si-x:average_leaf_historic
+                      - si-x:average_leaf_ncep
+                      - si-x:average_leaf_prism
+                      - si-x:lilac_bloom_ncep_historic
+                      - si-x:lilac_bloom_ncep
+                      - si-x:lilac_bloom_prism
+                      - si-x:lilac_leaf_ncep_historic
+                      - si-x:lilac_leaf_ncep
+                      - si-x:lilac_leaf_prism
+                      - si-x:zabelli_bloom_ncep_historic
+                      - si-x:zabelli_bloom_ncep
+                      - si-x:zabelli_bloom_prism
+                      - si-x:zabelli_leaf_ncep_historic
+                      - si-x:zabelli_leaf_ncep
+                      - si-x:zabelli_leaf_prism
                   - name: phenophase
                     in: query
                     description: the spring index phenophase to average over
-                    required: true
                     type: string
                     enum:
                       - leaf
@@ -1977,7 +2066,6 @@ paths:
                   - name: plant
                     in: query
                     description: the spring index plant or average for all three combined (for BEST only average is available)
-                    required: true
                     type: string
                     enum:
                       - lilac
@@ -2565,7 +2653,6 @@ paths:
                   - name: climate
                     in: query
                     description: the backing climate data provider. NCEP available from 2016 on, PRISM available from 1981 through previous year, BEST available from 1880-2013.
-                    required: true
                     type: string
                     enum:
                       - NCEP
